plugins {
	id "architectury-plugin" version "3.4-SNAPSHOT"
	id "dev.architectury.loom" version "0.12.0-SNAPSHOT" apply false
	id "com.matthewprenger.cursegradle" version "1.4.0" apply false
}

architectury {
	minecraft = rootProject.minecraft_version
}

subprojects {
	apply plugin: "dev.architectury.loom"

	loom {
		silentMojangMappingsLicense()
	}

	dependencies {
		minecraft "com.mojang:minecraft:${rootProject.minecraft_version}"
		mappings loom.officialMojangMappings()
	}
}

allprojects {
	apply plugin: "java"
	apply plugin: "architectury-plugin"
	apply plugin: "maven-publish"
	apply from: "https://files.saps.dev/ci/git-md-changelog.gradle"

	def ENV = System.getenv()
	version = "${mod_version}-build.${ENV.GITHUB_RUN_NUMBER ?: 9999}"
	group = project.maven_group
	archivesBaseName = project.archives_base_name

	sourceCompatibility = targetCompatibility = compileJava.sourceCompatibility = compileJava.targetCompatibility = 17

	compileJava {
		options.encoding = "UTF-8"
	}

	repositories {
		maven {
			url "https://maven.architectury.dev/"
		}

		maven {
			url "https://maven.blamejared.com/"
		}

		maven {
			url "https://maven.saps.dev/minecraft"
			content {
				includeGroup "dev.latvian.mods"
				includeGroup "dev.ftb.mods"
			}
		}
	}

	java {
		withSourcesJar()
	}
}

task curseforgePublish
